# udemy-llm-apps

./: .gitignore  README.md  home.py  pyproject.toml
.devcontainer/: devcontainer.json
pages/: simple_chat.py  sql.py
