[tool.poetry]
name = "udemy-llm-apps"
version = "0.1.0"
description = ""
authors = ["kei-600th <kei19941005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "1.25.0"
openai = "0.27.8"
langchain = "0.0.266"
llama-index = "0.8.5"
nltk = "3.8.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
